config/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
  namespace: aibrix-system
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: aibrix-system
spec:
  gatewayClassName: aibrix-eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
